--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -67,7 +67,7 @@
         <section c-tools>
             <a href="http://telegra.ph/" class="red bold"><i>telegra.ph</i></a>
             <a href="https://whimsical.co/N5mPdNPKnDFELwEaCS4Wj">schem-diagram</a>
-            <a href="https://www.zoho.eu/docs/"><i>file storage</i></a>
+            <a href="https://wetransfer.com/"><i>file storage</i></a>
             <a b href="https://wego.here.com/"><i>City Maps</i></a>
             <figure>
                 <a href="https://www.google.com/maps/place/Berlin,+Germany/@52.5065133,13.1445545,10z/data=!4m5!3m4!1s0x0:0x42120465b5e3b70!8m2!3d52.5200066!4d13.404954!5m1!1e4"><i>G Maps</i></a>
@@ -95,7 +95,7 @@
     <article>
         <section c-hq>
             <figure>
-                <a c href="https://m.facebook.com/"><i>FB</i></a>
+                <a c href="https://facebook.com/"><i>FB</i></a>
                 <a c href="https://www.instagram.com/zinoviasmartfon/">IN</a>
                 <a c href="http://www.youtube.com/"><i>YT</i></a>
                 <a c href="http://www.hattrick.org/"><i>HT</i></a>
