--- a/appZapp/app-seed.html
+++ b/appZapp/app-seed.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- app7000-Zapp -->
+<!doctype html><!-- app7001-Zapp -->
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -10,18 +10,47 @@
     <title>ʕ⊙ᴥ⊙ʔ</title>
 
 
+    <!-- ========================================= DESIGN -->
+
+    <link
+        href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic"
+        rel="stylesheet">
+    <link
+        href="app/styles/app.css"
+        rel="stylesheet" type="text/css">
+
     <!-- ========================================= APP MAIN -->
 
-    <!-- design font -->
-    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic" rel="stylesheet">
 
-    <link  href="app/styles/app.css" rel="stylesheet" type="text/css">
-    <script src="app/script/app.js"  defer></script>
+    <script src="app/script/app-core.js"></script>
+    <script>app.log('... Wake Up, App!')</script>
+
+    <!-- ========================================= APP LIBS -->
+
+    <script src="app/script/components/class-mutator.js"></script>
+    <script>app.take({name:'mutate', f:el_class_mutator})</script>
+
+    <script src="app/script/components/scroll-follower.js"></script>
+    <script>app.take({name:'wayway', f:queenScrollFollower})</script>
+
+    <script src="app/script/components/scroll-trigger.js"></script>
+    <script>app.take({name:'waydot', f:queenScrollTrigger})</script>
+
+    <script src="app/script/components/image-zoom.js"></script>
+    <script>app.onload(ActivateImageZoom)</script>
 
 
     <!-- ========================================= APP CUSTOM -->
 
-
+    <script>
+        function RunInterface () {
+            app.Welcome()
+            app.log('App, Welcome!')
+        }
+        window.onload = function Run() {
+            setTimeout(RunInterface,100)
+        }
+    </script>
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
