--- a/appZapp/components.html
+++ b/appZapp/components.html
@@ -85,6 +85,17 @@
     </section>
 
 
+    <section class="sakura sakura-content">
+        <header class="chapter-title">
+            <h2>Sakura template</h2>
+        </header>
+        <p class="auto"></p>
+        <p class="auto"></p>
+        <blockquote><p class="auto"></p></blockquote>
+    </section>
+
+
+
 
 
 
