--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -168,6 +168,9 @@
             <a href="http://radiomap.eu/lv/play/merkurs"><i>♪ Radio Merkurs</i></a>
             <a href="http://www.diary.ru/~musicbunker/"><i>♪ Folk</i></a>
         </section>
+        <section c-dev3>
+            <a href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪ Dev Podcasts</i></a>
+        </section>
     </atricle>
 
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
