--- a/appZapp/components.html
+++ b/appZapp/components.html
@@ -68,6 +68,31 @@
             color: hsl(200,40%,74%);
         }
     </style>
+    <style>
+        [chapter] {
+            padding-top:    2em;
+            padding-bottom: 2em;
+        }
+        [demo-fullscreen] {
+            background-color: hsla(177, 42%, 76%,   1);
+        }
+        [demo-fullscreen] .group>.bg {
+            background-color: hsla(229, 55%, 12%, 0.7);
+            color: white;
+        }
+        [demo-form] {
+            max-width: 28em;
+        }
+        [demo-form] .form-submit {
+            padding-top: 0.875em;
+        }
+        [demo-slide-header] {
+            height: 40vh;
+        }
+        [demo-slide-header]:before {
+            background-image: url(art/design-template/bg__light.jpg);
+        }
+    </style>
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
@@ -76,28 +101,365 @@
 
 
 
-    <section class="zetka">
+    <article class="zetka">
         <header class="chapter-title">
             <h2>Components</h2>
         </header>
         <code class="codeblock">/* samples */
         </code>
-    </section>
+    </article>
 
 
-    <section class="sakura sakura-content">
+    <article class="zetka">
+        <header class="chapter-title">
+            <h2>Eastside</h2>
+        </header>
+        <aside class="eastside is-active">
+            bar
+        </aside>
+    </article>
+
+
+    <article id="Sakura" chapter class="sakura sakura-content">
         <header class="chapter-title">
             <h2>Sakura template</h2>
         </header>
         <p class="auto"></p>
         <p class="auto"></p>
         <blockquote><p class="auto"></p></blockquote>
-    </section>
+    </article>
+    <article id="Fullscreen" demo-fullscreen class="fullscreen">
+
+        <header class="fullscreen-header is-box is-centered">
+            <h2>
+                fullscreen-header / fullscreen-body / fullscreen-footer
+                <i class="pill bg" id="T02">#T02</i>
+            </h2>
+        </header>
+
+        <section class="fullscreen-body is-v-padded">
+
+            <!-- box content -->
+            <div class="zetka zetka-as-overmain is-box">
+                <div class="block">
+                    <h1 title><a href="">Curacao Gaming Licence</a></h1>
+                    <p subtitle>Licensing of all iGaming Products — online casinos, sports betting, poker, lotteries, and bingo!</p>
+                </div>
+                <div class="block">
+                    <h2 title><a href="">Banking Solutions</a></h2>
+                    <p subtitle>Open bank & processing accounts for your gambling business.</p>
+                </div>
+            </div>
+            <!-- /box content -->
+
+        </section>
+
+        <footer class="fullscreen-footer is-box">
+            <a href="#learn-more-1" class="pill bg title">learn more</a>
+        </footer>
+
+    </article>
+    <div id="learn-more-1"></div>
+    <article id="DataTable" chapter class="zetka zetka-as-overmain">
+
+        <h1>Responsive Data Tables <i class="pill bg" id="T04">#T04</i></h1>
+
+        <p>
+            Break-point: 600px
+        </p>
+
+        <table class="data-table" data-table-type="1str,2num,3txt">
+            <caption>
+                <h2 class="bg is-centered">Simple Data Table</h2>
+            </caption>
+            <thead>
+                <tr>
+                    <th>
+                        Provider
+                    </th>
+                    <th>
+                        Games
+                    </th>
+                    <th>
+                        Description
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>
+                        Microgaming
+                    </th>
+                    <td>
+                        590
+                    </td>
+                    <td>
+                        The game is devoted to the Mighty Scandinavian god Thor, which gives out different symbols, such as Scatter Ram, to help a player win prizes. The option of additional gambling game is also available.
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Evolution Gaming
+                    </th>
+                    <td>
+                        84
+                    </td>
+                    <td>
+                        Evolution Gaming works with top-tier casino operators across Europe. The company is an undisputable leader in live dealer gaming business.
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        Betradar
+                    </th>
+                    <td>
+                        12800
+                    </td>
+                    <td>
+                        A reliable software that allows bookmaker operations, registering an impressive number of bets, monitor ratio changes and live scores, analyse large volumes of sports data. Betradar software has a robust functionality that will enable your casino to operate efficiently and smoothly under the supervision of a minimum number of employees.
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p>
+            class="data-table"<br>data-table-type="1str,2num,3txt"
+        </p>
+
+        <table class="data-table has-data-titles" data-table-type="1str,2num,3txt">
+            <caption>
+                <h2 class="bg is-centered">Mod: data-title="Column title"</h2>
+            </caption>
+            <thead>
+                <tr>
+                    <th>
+                        Provider
+                    </th>
+                    <th>
+                        Games
+                    </th>
+                    <th>
+                        Description
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th data-title="Provider">
+                        Microgaming
+                    </th>
+                    <td data-title="Games">
+                        590
+                    </td>
+                    <td data-title="Description with long value">
+                        The game is devoted to the Mighty Scandinavian god Thor, which gives out different symbols, such as Scatter Ram, to help a player win prizes. The option of additional gambling game is also available.
+                    </td>
+                </tr>
+                <tr>
+                    <th data-title="Provider">
+                        Evolution Gaming
+                    </th>
+                    <td data-title="Games">
+                        84
+                    </td>
+                    <td data-title="Description">
+                        Evolution Gaming works with top-tier casino operators across Europe. The company is an undisputable leader in live dealer gaming business.
+                    </td>
+                </tr>
+                <tr>
+                    <th data-title="Provider">
+                        Betradar
+                    </th>
+                    <td data-title="Games">
+                        12800
+                    </td>
+                    <td data-title="Description">
+                        A reliable software that allows bookmaker operations, registering an impressive number of bets, monitor ratio changes and live scores, analyse large volumes of sports data. Betradar software has a robust functionality that will enable your casino to operate efficiently and smoothly under the supervision of a minimum number of employees.
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p>
+            class="data-table has-data-titles" data-table-type="1str,2num,3txt"
+        </p>
+
+    </article>
+    <article is="Sidebar" chapter demo-sidebar class="zetka">
+        <header class="chapter-title">
+            <h2>Sidebar</h2>
+        </header>
+        <code class="codeblock">/* options */
+            .sidebar
+            .sidebar.is-active
+            .sidebar-westside
+            html.has-shadow-overlay
+        </code>
+        <section>
+            <p></p>
+        </section>
+        <style>
+            [demo-sidebar] .sidebar {
+                background-color: white;
+                color: black;
+            }
+        </style>
+        <div>
+            <button class="js-toggle-sidebar">open sidebar</button>
+        </div>
+        <nav class="sidebar is-box js-sidebar">
+            <div class="zetka zetka-as-overmain">
+                <h2>Sidebar</h2>
+                <button class="js-toggle-sidebar">close sidebar</button>
+                <p class="auto"></p>
+                <p class="auto"></p>
+                <p class="auto"></p>
+                <p class="auto"></p>
+                <p class="auto"></p>
+                <p class="auto"></p>
+                <p class="auto"></p>
+                <p class="auto"></p>
+                <p class="auto"></p>
+            </div>
+        </nav>
+        <script>
+            function ChapterBarActivator () {
+
+                const bar = document.querySelector('.js-sidebar')
+                const toggleClass = 'is-active'
+                const mom = document.querySelector('html')
+                const toggleMomClass = 'has-shadow-overlay'
+
+                function setShadowOverlay (commander) {
+                    function checkStateForMom(elem, className) {
+                      return new RegExp(' ' + className + ' ').test(' ' + elem.className + ' ');
+                    }
+                    if (checkStateForMom(commander,toggleClass))
+                        app.mutate({el:mom, addClass:toggleMomClass })
+                    else
+                        app.mutate({el:mom, removeClass:toggleMomClass })
+                }
+                app.workers.ShadowOverlayToggler = setShadowOverlay
+
+                // toggle
+
+                const klikers = document.querySelectorAll('.js-toggle-sidebar')
+                const klikerActivator = (el)=>el.addEventListener('click', toggleChapterBar)
+                function toggleChapterBar (e) {
+                    app.mutate({el:bar, toggleClass})
+                    setShadowOverlay(bar)
+                }
+                app.workers.ChapterBarToggler = toggleChapterBar
+                klikers.forEach(klikerActivator)
+
+                // close
+
+                const closer = document.querySelectorAll('.js-close-sidebar')
+                function closeChapterBar (e) {
+                    app.mutate({el:bar, removeClass: toggleClass})
+                    app.mutate({el:mom, removeClass: toggleMomClass })
+                }
+                app.workers.ChapterBarCloser =   closeChapterBar
+                closer.forEach((el)=>el.addEventListener('click', closeChapterBar))
+            }
+            app.onload(ChapterBarActivator)
+
+        </script>
+    </article>
+
+    <style>
+        #DefaultForm, #CompactForm {
+            background-color: #f0faf0;
+            color: #323232;
+        }
+    </style>
+    <article id="DefaultForm" chapter class="zetka">
+
+        <h1>
+            <span>Default form</span>
+            <i class="pill bg" id="T03">#T03</i>
+        </h1>
+
+        <div demo-form class="zetka-overmain is-box">
+
+            <header>
+                <p>Minimal form template, please, fill in the form:</p>
+            </header>
+
+
+            <!-- minimal form template -->
+            <form class="block" action="?it-was-form-submit">
+                <section class="block">
+                    <div class="form-item">
+                         <input tabindex="1" type="text" name="your-name" id="your-name" value="" placeholder="(required)" required />
+                         <label for="your-name">Name</label>
+                    </div>
+                    <div class="form-item">
+                         <input tabindex="1" type="email" name="your-email" id="your-email" value="" placeholder="(required)" required />
+                         <label for="your-email">Email</label>
+                    </div>
+                    <div class="form-textarea">
+                         <textarea tabindex="1" name="your-message" id="your-message" rows="4"></textarea>
+                         <label for="your-message">Message or Question</label>
+                    </div>
+                </section>
+                <section class="form-submit">
+                     <button tabindex="1" type="submit" class="button">Send</button>
+                     <label></label>
+                </section>
+            </form>
+            <!-- /minimal form template -->
+
+        </div>
+
+    </article>
+    <article id="CompactForm" chapter class="zetka">
+
+        <h1>
+            <span>Extra compact form</span>
+            <i class="pill bg" id="T03">#T03</i>
+        </h1>
+
+        <div demo-form class="zetka-overmain is-box">
+
+            <header>
+                <p>Compact form template, please, fill in the form:</p>
+            </header>
+
+
+            <!-- minimal form template -->
+            <form class="block extra-compact-form" action="?it-was-form-submit">
+                <section class="block">
+                    <div class="form-item">
+                         <input tabindex="1" type="text" name="your-name" id="your-name" value="" placeholder="(required)" required />
+                         <label for="your-name">Name</label>
+                    </div>
+                    <div class="form-item">
+                         <input tabindex="1" type="email" name="your-email" id="your-email" value="" placeholder="(required)" required />
+                         <label for="your-email">Email</label>
+                    </div>
+                    <div class="form-textarea">
+                         <textarea tabindex="1" name="your-message" id="your-message" rows="4"></textarea>
+                         <label for="your-message">Message or Question</label>
+                    </div>
+                </section>
+                <section class="form-submit">
+                     <button tabindex="1" type="submit" class="button">Send</button>
+                     <label></label>
+                </section>
+            </form>
+            <!-- /minimal form template -->
+
+        </div>
+
+    </article>
 
 
 
 
-
+<!-- empty div for shadow overlay -->
+<div class="screen-shadow-overlay js-close-sidebar"></div>
+<!-- / empty div for shadow overlay -->
 
 
 <!-- ========================================= PAGE CUSTOM -->
