--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -146,6 +146,7 @@
     <atricle c-news1>
         <section c-news1>
             <a href="https://news.ycombinator.com/"><i>HackerNews</i></a>
+            <a href="https://www.nngroup.com/articles/"><i>Jacob Nielsen</i></a>
             <a href="http://www.habrahabr.ru/" class=""><i>habrahabr</i></a>
             <a href="http://www.jvetrau.com/">jvetrau</a>
             <a href="http://www.smashingmagazine.com/">Smashing Mag</a>
@@ -278,6 +279,7 @@
             <figure>
                 <a href="https://jakearchibald.github.io/svgomg/">Optimize SVG</a>
                 <a href="https://tinypng.com/">PNG</a>
+                <a href="https://online2pdf.com/">PDF</a>
             </figure>
             <figure>
                 <a href="https://cloudconvert.com/website-to-pdf"><i>url·pdf</i></a>
@@ -285,17 +287,22 @@
                 <a href="https://cloudconvert.com/formats"><i>...</i></a>
             </figure>
 
-            <section c-hq>
-                <figure>
-                    <a href="dvBookmarks2018.html"><i>dvTul</i></a>
-                    <a href="inet2018.html"><i>inet</i></a>
-                </figure>
-            </section>
+            <figure>
+                <a href="dvBookmarks2018.html"><i>dvTul</i></a>
+                <a href="inet2018.html"><i>inet</i></a>
+            </figure>
 
             <figure>
                 <a b href="https://www.photopea.com/"><i>Photopea</i></a>
                 <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour♥</a>
             </figure>
+
+            <section c-hq>
+                <figure>
+                    <a b c href="https://webmaker.app/app/">Editor</a>
+                </figure>
+            </section>
+
 
             <section c-dev2>
                 <figure>
