--- a/Snippets/svg.html
+++ b/Snippets/svg.html
@@ -1,3 +1,12 @@
+<!-- insert inline svg -->
+
+<iframe src="signal.svg" onload="this.before(this.contentDocument.children[0]); this.remove();"></iframe>
+
+<!-- normal size strokes -->
+
+<path vector-effect="non-scaling-stroke"/>
+
+
 <!-- ==================================================== material icons -->
 
 <!-- drop down -->
