--- a/appZapp/js-pathQueen.html
+++ b/appZapp/js-pathQueen.html
@@ -31,25 +31,7 @@
     <script>app.take({name:'waydot', f:queenScrollTrigger})</script>
 
     <script src="app/script/components/svg-transform.js"></script>
-    <script>
-        const queenPathDance = function Ribosome (dna) {
-
-            var triangle = [[1, 0], [2, 2], [0, 2]],
-                pentagon = [[0, 0], [2, 0], [2, 1], [1, 2], [0, 1]];
-
-            var interpolator = flubber.interpolate(triangle, pentagon);
-
-            const rna = {
-                el:     dna.el,
-                pathA:  dna.pathA,
-                pathB:  dna.pathB,
-                time:   dna.time
-            }
-            app.log(rna)
-            app.log(rna.el.attributes.d.value)
-        }
-        app.take({name:'pathDance', f:queenPathDance})
-    </script>
+    <script>app.take({name:'pathDance', f:ActivatedPathDanceQueen()})</script>
 
     <!-- ========================================= DanceQueen -->
 
@@ -63,32 +45,68 @@
             // CORE
 
             queen.kids = {}
-            queen.kid = NewBaby({name:'ili'})
 
             // API
 
             Object.assign(queen ,{
-                Welcome
+                Welcome,
+                Create
             })
 
             // Queen`s body
 
             function PathDancer (dna={}) {
-                this.name = dna.name || ''
-            }
+                // object linked to <path> element
 
-            function NewBaby (dna) {
-                let kid = new PathDancer(dna)
-                queen.kids[kid.name] = kid
-                return kid
-            }
+                let dancer  = this
+                dancer.id   = dna.id || ''
+                dancer.el   = dna.el || false // dom element
 
+                // path values
+
+                dancer.d0   = dna.d0 || '' // first
+                dancer.d1   = dna.d1 || '' // last
+                dancer.cx   = 0 // current state value between 0..1
+
+            }
+            function PathDancerBecomesActive (dancer) {
+                dancer.Dx = magic.interpolate( dancer.d0, dancer.d1 )
+                dancer.Draw = (x) => {
+                    dancer.cx = x
+                    dancer.el.attributes.d.value = dancer.Dx(dancer.cx)
+                    return dancer
+                }
+                dancer.Stay = (x) => {
+                    if (x<0) x = 0
+                    if (x>1) x = 1
+                    if (x != dancer.cx) dancer.Draw(x)
+                    return dancer
+                }
+                return dancer
+            }
+            function Create (dna={}) {
+
+                if (typeof(dna)==='string') dna = {id:dna}
+                if (!dna.id) return false
+
+                dna.el   = document.getElementById(dna.id)
+                dna.ell  = document.getElementById(dna.id+'-1') // CODEX
+                dna.d0   = dna.el.attributes.d.value
+                dna.d1   = dna.ell.attributes.d.value
+
+                let dancer = PathDancerBecomesActive( new PathDancer(dna) )
+                queen.kids[dancer.id] = dancer
+                return dancer
+            }
             function Welcome () {
                 app.log( 'DanceQueen, Welcome!' )
             }
+
+            // End of Queen
         }
-        const pathDanceQueen = new PathDanceQueen()
-        pathDanceQueen.Welcome()
+        //const pathDanceQueen = new PathDanceQueen()
+        //app.take({name:'pathDance', f:pathDanceQueen})
+        //app.onload(pathDanceQueen.Welcome)
     </script>
 
     <!-- ========================================= APP LOADER -->
@@ -103,6 +121,10 @@
 
     <style>
         .triggered { outline: 4px solid firebrick; }
+        .svg>svg {
+            width: 200px;
+            height: auto;
+        }
     </style>
 
 
@@ -115,6 +137,94 @@
 <body class="body-wrap design-template">
 
     <h1>Path Dance Queen</h1>
+
+    <section class="scene">
+        <div class="svg">
+            <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+            </svg>
+        </div>
+        <div class="svg">
+            <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 0h24v24H0zm21.02 19c0 1.1-.9 2-2 2h-14c-1.1 0-2-.9-2-2V5c0-1.1.9-2 2-2h14c1.1 0 2 .9 2 2v14z" fill="none"/>
+                <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM7.5 18c-.83 0-1.5-.67-1.5-1.5S6.67 15 7.5 15s1.5.67 1.5 1.5S8.33 18 7.5 18zm0-9C6.67 9 6 8.33 6 7.5S6.67 6 7.5 6 9 6.67 9 7.5 8.33 9 7.5 9zm4.5 4.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm4.5 4.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm0-9c-.83 0-1.5-.67-1.5-1.5S15.67 6 16.5 6s1.5.67 1.5 1.5S17.33 9 16.5 9z"/>
+            </svg>
+        </div>
+        <div class="svg">
+            <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+                <path d="M0 0h24v24H0z" fill="none"/>
+            </svg>
+        </div>
+        <nav>
+            <button onclick="dodo(0.0)">0</button>
+            <button onclick="dodo(0.1)">1</button>
+            <button onclick="dodo(0.2)">2</button>
+            <button onclick="dodo(0.3)">3</button>
+            <button onclick="dodo(0.4)">4</button>
+            <button onclick="dodo(0.5)">5</button>
+            <button onclick="dodo(0.6)">6</button>
+            <button onclick="dodo(0.7)">7</button>
+            <button onclick="dodo(0.8)">8</button>
+            <button onclick="dodo(0.9)">9</button>
+            <button onclick="dodo(1.0)">F</button>
+        </nav>
+        <div class="svg">
+            <svg fill="#660000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <g class="step-0">
+                    <path id="demo-path" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+                </g>
+                <g class="step-next">
+                    <path id="demo-path-1" style="opacity:0.5" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+                </g>
+            </svg>
+        </div>
+        <div class="svg">
+            <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+            </svg>
+        </div>
+        <div id="TRIGGA">TRIGGA</div>
+        <div style="background:pink;height:100vh"></div>
+    </section>
+
+    <script>
+        var t2 = 1
+        function testDanceQueen () {
+            t2 = app.pathDance.Create('demo-path')
+            const trigga = document.getElementById('TRIGGA')
+            app.wayway({
+                elem: trigga,
+                from: 'top-bottom',
+                to:   'top-middle',
+                inside:  (instance, percentage, props) => t2.Draw(percentage*0.01),
+                outside: (instance, percentage, props) => t2.Stay(percentage*0.01)
+            })
+        }
+        app.onload(testDanceQueen)
+
+
+            function DemoDancer () {
+                const g1 = document.getElementById('demo-path')
+                const g2 = document.getElementById('demo-path-1')
+                const d1 = g1.attributes.d.value
+                const d2 = g2.attributes.d.value
+                const interpolator = flubber.interpolate(d1, d2);
+                const action = function (x) {
+                    g1.attributes.d.value = interpolator(x)
+                }
+                return action
+                //g1.attributes.d.value = interpolator(0.5)
+            }
+            var dodo = ()=>false;
+            function do5 () {
+                dodo = DemoDancer()
+            }
+            //app.onload(do5)
+            
+    </script>
 
 </body>
 </html>
