--- a/appZapp/components.html
+++ b/appZapp/components.html
@@ -12,6 +12,12 @@
 
     <!-- ========================================= DESIGN -->
 
+    <style> /* ༼°▽°༽ boot style */
+        body    { width: 100%; height: auto; overflow: hidden; }
+        body    { font-size: 16px; }
+        img,svg { max-width: 100% }
+    </style>
+
     <link
         href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic"
         rel="stylesheet">
@@ -19,13 +25,15 @@
         href="app/styles/app.css"
         rel="stylesheet" type="text/css">
 
-    <!-- ========================================= APP MAIN -->
-
+    <!-- ========================================= APP HEAD -->
 
     <script src="app/script/app-core.js"></script>
     <script>app.log('... Wake Up, App!')</script>
 
     <!-- ========================================= APP LIBS -->
+
+    <script src="app/script/components/image-zoom.js"></script>
+    <script>app.onload(ActivateImageZoom)</script>
 
     <script src="app/script/components/class-mutator.js"></script>
     <script>app.take({name:'mutate', f:el_class_mutator})</script>
@@ -36,17 +44,16 @@
     <script src="app/script/components/scroll-trigger.js"></script>
     <script>app.take({name:'waydot', f:queenScrollTrigger})</script>
 
-    <script src="app/script/components/image-zoom.js"></script>
-    <script>app.onload(ActivateImageZoom)</script>
+    <script src="app/script/components/svg-transform.js"></script>
+    <script>app.take({name:'morphy', f:ActivatedPathDanceQueen()})</script>
 
     <!-- ========================================= APP LOADER -->
 
     <script>
-        function RunInterface () {app.Welcome();app.log('App, Welcome!')}
-        function Run() {setTimeout(RunInterface,100)}
+        function RunInterface () { app.Welcome().log('App, Welcome!') }
+        function Run() { setTimeout(RunInterface,200) }
         window.onload = Run
     </script>
-
     <!-- ========================================= APP CUSTOM -->
 
     <style>
@@ -112,7 +119,7 @@
         <header class="chapter-title">
             <h2>Eastside</h2>
         </header>
-        <aside class="eastside is-active">
+        <aside class="eastside">
             bar
         </aside>
     </article>
