--- a/Snippets/svg.html
+++ b/Snippets/svg.html
@@ -7,6 +7,20 @@
 <path vector-effect="non-scaling-stroke"/>
 
 
+<!-- ==================================================== Gradient Sample -->
+
+<svg class="large shape" viewBox="0 0 96 96">
+  <defs>
+    <linearGradient id="circleGradient" x1="0%" x2="100%" y1="20%" y2="80%">
+      <stop stop-color="#373734" offset="0%"/>
+      <stop stop-color="#242423" offset="50%"/>
+      <stop stop-color="#0D0D0C" offset="100%"/>
+    </linearGradient>
+  </defs>
+  <circle cx="48" cy="48" r="28" fill-rule="evenodd" stroke-linecap="square" fill="url(#circleGradient)"/>
+</svg>
+
+
 <!-- ==================================================== material icons -->
 
 <!-- drop down -->
