--- a/Snippets/svg.html
+++ b/Snippets/svg.html
@@ -1,3 +1,6 @@
+
+<rect width="1000" height="50"/>
+
 <!-- insert inline svg -->
 
 <iframe src="signal.svg" onload="this.before(this.contentDocument.children[0]); this.remove();"></iframe>
