--- a/appZapp/components.html
+++ b/appZapp/components.html
@@ -104,8 +104,6 @@
 </head>
 <body class="body-wrap design-template mother-chapter">
 
-
-
     <article class="zetka">
         <header class="chapter-title">
             <h2>Components</h2>
@@ -113,6 +111,20 @@
         <code class="codeblock">/* samples */
         </code>
     </article>
+
+
+    <article class="zetka">
+        <header class="chapter-title">
+            <h2>Swed Design</h2>
+        </header>
+    </article>
+
+    <section class="swed-welcome">
+        <header  class="head" hidden>1</header>
+        <section class="side">2</section>
+        <section class="main">3</section>
+        <footer  class="foot">4</footer>
+    </section>
 
 
     <article class="zetka">
