--- a/appZapp/app-seed.html
+++ b/appZapp/app-seed.html
@@ -57,7 +57,10 @@
 
     <!-- ========================================= APP CUSTOM -->
 
-    
+    <link
+        href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+        crossorigin="anonymous" rel="stylesheet">
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
