--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -102,13 +102,15 @@
             </figure>
         </section>
         <section c-ent>
+            <a dh c href="https://www.volleyballworld.tv/home">Volleyball World</a>
             <figure>
                 <a b href="http://livetv.sx/allupcoming/" class="red bold">LiveTV</a>
-                <a min href="http://www.myfeed4u.net/section/other/">black</a>
+                
             </figure>
             <figure>
                 <a href="https://sport-tv.me/eurosport-online-ch">Eurosport</a>
                 <a href="http://www.laola1.tv/">Laola</a>
+                <a href="http://www.myfeed4u.net/section/other/">black</a>
             </figure>
             <figure>
                 <a href="http://www.biathlonworld.com/calendar/">IBU Calendar</a>
@@ -346,9 +348,11 @@
                 <a href="https://www.webpagetest.org/"><i>WebPageTest</i></a>
             </figure>
             <a href="https://developers.facebook.com/tools/debug/">FB debug</a>
-            <a href="https://analytics.google.com/analytics/web/">G Analytics</a>
-
-            <a b href="http://medialabamsterdam.com/toolkit/"><i>Design methods</i></a>
+            <figure>
+                <a b c href="https://calltoidea.com/">Call to idea</a>
+                <a b c href="http://medialabamsterdam.com/toolkit/"><i>Design methods</i></a>
+            </figure>
+            
 
         </section>
     </article>
