--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -69,113 +69,44 @@
             height: auto;
         }
         .step-next { display: none; }
+
     </style>
-
-    <comment hidden>
-        .swed-dropdown {
-            position: relative;
-            z-index: 0;
-        }
-        .swed-dropdown .label {
-            line-height: 1.5;
-            padding: 0.25em 0.5em;
-            position: relative;
-            z-index: 1;
-            display: flex;
-            align-items: center;
-        }
-        .swed-dropdown:hover .label {
-            color: hsl(2,45%,65%);
-        }
-        .swed-dropdown .label .marker {
-            width:  1.5em;
-            height: 1.5em;
-            background-size: 100%;
-            background-image: url("data:image/svg+xml,%3Csvg fill%3D%22white%22 width%3D%2224%22 height%3D%2224%22 viewBox%3D%220 0 24 24%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath d%3D%22M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z%22%2F%3E%3C%2Fsvg%3E");
-            transition: transform 240ms;
-            transform-origin: center center;
-        }
-        .swed-dropdown:hover .label .marker {
-            transform: rotate(180deg);
-            
-            
-        }
-        .swed-dropdown .droplist {
-            pointer-events: none;
-
-            position: absolute;
-            z-index: 0;
-            top:  -0.25em;
-            left: -0.25em;
-        }
-        .swed-dropdown:hover .droplist {
-            pointer-events: all;
-        }
-        .swed-dropdown .droplist::after {
-            content: '';
-            position: absolute;
-            z-index: -2;
-            top:     -2em;
-            right:   -2em;
-            bottom:  -2em;
-            left:    -2em;
-            display: none;
-        }
-        .swed-dropdown:hover .droplist::after {
-            display: block;
-        }
-        .swed-dropdown .droplist::before {
-            content: '';
-            position: absolute;
-            z-index: -1;
-            top:      0;
-            right:    0;
-            bottom:   0;
-            left:     0;
-            background-color: rgba(255,255,255,0.1);
-
-            transform:        scale(0);
-            transform-origin: 1em 1em;
-            transition: transform 240ms ease-in;
-            transition-timing-function: cubic-bezier(0.600, -0.280, 0.735, 0.045); /* easeInBack */
-        }
-        .swed-dropdown:hover .droplist::before {
-            transform: scale(1);
-            transition-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1.275); /* easeOutBack */
-        }
-        .swed-dropdown .droplist>ul {
-            list-style: none;
-            margin:     0;
-            padding:    0;
-            margin-top: 2.5em;
-            padding-bottom: 0.5em;
-
-            opacity: 0;
-            transition: opacity 240ms ease-out;
-        }
-        .swed-dropdown:hover .droplist>ul {
-            opacity: 1;
-            transition: opacity 240ms ease-in;
-        }
-        .swed-dropdown .droplist>ul>li {
-            white-space: nowrap;
-            padding: 0.25em 0.75em;
-        }
-        .swed-dropdown .droplist>ul>li:hover {
-            background-color: rgba(0,0,0,0.25);
-        }
-        .swed-dropdown .droplist>ul>li:hover>span {
-            display: block;
-            transform:  translateX(0.25em);
-            transition: transform 240ms ease-in;
-            transition-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1.275); /* easeOutBack */
-        }
-    </comment>
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
 </head>
 <body class="body-wrap design-template--swed">
+
+    <section class="swed-screen">
+        <div class="swed-double-sticker-wrap">
+            <div class="swed-sticker">
+                <div class="title">why us</div>
+                <ul>
+                    <li>numerous awardds</li>
+                    <li>studios in malta, riga</li>
+                    <li>live streams from land-based venues</li>
+                </ul>
+            </div>
+            <div class="swed-sticker">
+                <div>
+                    <div class="big-title">35+</div>
+                    <div>mobile compativle games</div>
+                </div>
+                <div>
+                    <div class="big-title">3000+</div>
+                    <div>Dealers</div>
+                </div>
+            </div>
+        </div>
+            <div class="swed-sticker">
+                <div class="title">why us</div>
+                <ul>
+                    <li>numerous awardds</li>
+                    <li>studios in malta, riga</li>
+                    <li>live streams from land-based venues</li>
+                </ul>
+            </div>
+    </section>
 
     <section class="swed-screen">
         <div class="swed-group">
